Fix spacing issue of bell icon on mobile devices

--- a/client/src/stylesheets/Nav.css
+++ b/client/src/stylesheets/Nav.css
@@ -22,5 +22,5 @@
 
 .navbar-custom i {
   color: #5d2f75;
-  padding-left: 200px;
+  padding-left: 90%;
 }
